# llms-and-ontologies

./: .env.example  .gitignore  1_vector_search.py  2_ontologies_owl.py  3_ontologies_pydantic.py  4_query_ontology.py  5_query_ontology_neo4j.py  README.md  SCRIPTS_COMPARISON.md  docker-compose.yml  pyproject.toml  utils.py
